# docs/swagger.json
@@ -14,7 +14,7 @@
     "paths": {
         "/lyrics": {
             "get": {
-                "description": "Returns lyrics for specific song or list of all songs by artist if title not provided",
+                "description": "If 'title' is provided, returns lyrics for the specific song.\nOtherwise, returns a list of all songs by the artist (without lyrics).",
                 "tags": [
                     "lyrics"
                 ],
@@ -38,12 +38,9 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Returns artist tracks or track if title provided",
+                        "description": "Returns song (object) or artist tracks (array)",
                         "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/model.Track"
-                            }
+                            "type": "object"
                         }
                     },
                     "400": {
@@ -93,7 +90,7 @@
                     "201": {
                         "description": "Successfully saved lyrics",
                         "schema": {
-                            "$ref": "#/definitions/model.Track"
+                            "$ref": "#/definitions/dto.TrackResponse"
                         }
                     },
                     "400": {
@@ -163,7 +160,7 @@
                 }
             }
         },
-        "model.Track": {
+        "dto.TrackResponse": {
             "type": "object",
             "properties": {
                 "artist": {
